vlib/v/checker/tests/optional_fn_err.out
vlib/v/checker/tests/optional_fn_err.vv:25:2: error: foo() returns an option, so it should have either an `or {}` block, or `?` at the end
   23 | fn main() {
   24 |     // Calling foo() without ? or an or block, should be an error.
   25 |     foo()
      |     ~~~~~
   26 | 
   27 |     _ := bar(0)
vlib/v/checker/tests/optional_fn_err.vv:27:7: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   25 |     foo()
   26 | 
   27 |     _ := bar(0)
      |          ~~~~~~
   28 |     _ := [bar(0)]
   29 |
vlib/v/checker/tests/optional_fn_err.vv:28:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   26 | 
   27 |     _ := bar(0)
   28 |     _ := [bar(0)]
      |           ~~~~~~
   29 | 
   30 |     // Calling fn with optional argument
vlib/v/checker/tests/optional_fn_err.vv:31:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   29 | 
   30 |     // Calling fn with optional argument
   31 |     println(twice(bar(0)))
      |                   ~~~~~~
   32 |     // method and fn field
   33 |     mut v := Data{fn (_ int) {}, 1}
vlib/v/checker/tests/optional_fn_err.vv:34:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   32 |     // method and fn field
   33 |     mut v := Data{fn (_ int) {}, 1}
   34 |     v.add(bar(0))
      |           ~~~~~~
   35 |     v.f(bar(0))
   36 |     // anon fn
vlib/v/checker/tests/optional_fn_err.vv:35:6: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   33 |     mut v := Data{fn (_ int) {}, 1}
   34 |     v.add(bar(0))
   35 |     v.f(bar(0))
      |         ~~~~~~
   36 |     // anon fn
   37 |     fn (_ int) {}(bar(0))
vlib/v/checker/tests/optional_fn_err.vv:37:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   35 |     v.f(bar(0))
   36 |     // anon fn
   37 |     fn (_ int) {}(bar(0))
      |                   ~~~~~~
   38 |     // array builtin methods
   39 |     mut arr := [1, 2]
vlib/v/checker/tests/optional_fn_err.vv:40:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   38 |     // array builtin methods
   39 |     mut arr := [1, 2]
   40 |     arr.insert(0, bar(0))
      |                   ~~~~~~
   41 |     arr.prepend(bar(0))
   42 |     arr.contains(bar(0))
vlib/v/checker/tests/optional_fn_err.vv:41:14: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   39 |     mut arr := [1, 2]
   40 |     arr.insert(0, bar(0))
   41 |     arr.prepend(bar(0))
      |                 ~~~~~~
   42 |     arr.contains(bar(0))
   43 |     arr.index(bar(0))
vlib/v/checker/tests/optional_fn_err.vv:42:15: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   40 |     arr.insert(0, bar(0))
   41 |     arr.prepend(bar(0))
   42 |     arr.contains(bar(0))
      |                  ~~~~~~
   43 |     arr.index(bar(0))
   44 |     println(arr.map(bar(0)))
vlib/v/checker/tests/optional_fn_err.vv:43:12: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   41 |     arr.prepend(bar(0))
   42 |     arr.contains(bar(0))
   43 |     arr.index(bar(0))
      |               ~~~~~~
   44 |     println(arr.map(bar(0)))
   45 |     println(arr.filter(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:44:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   42 |     arr.contains(bar(0))
   43 |     arr.index(bar(0))
   44 |     println(arr.map(bar(0)))
      |                     ~~~~~~
   45 |     println(arr.filter(bar(true)))
   46 |     println(arr.any(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:45:21: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   43 |     arr.index(bar(0))
   44 |     println(arr.map(bar(0)))
   45 |     println(arr.filter(bar(true)))
      |                        ~~~~~~~~~
   46 |     println(arr.any(bar(true)))
   47 |     println(arr.all(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:46:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   44 |     println(arr.map(bar(0)))
   45 |     println(arr.filter(bar(true)))
   46 |     println(arr.any(bar(true)))
      |                     ~~~~~~~~~
   47 |     println(arr.all(bar(true)))
   48 | }
vlib/v/checker/tests/optional_fn_err.vv:47:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   45 |     println(arr.filter(bar(true)))
   46 |     println(arr.any(bar(true)))
   47 |     println(arr.all(bar(true)))
      |                     ~~~~~~~~~
   48 | }
